gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitea
  name: gitea
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - image: gitea/gitea:1.19
        imagePullPolicy: Always
        name: gitea
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: gitea-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea
