gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gitea
  name: gitea
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: gitea
  type: ClusterIP
status:
  loadBalancer: {}
